tests/paczka1/fuzzy1/43970715.err
Error in line 6: jdPWAF S451 22,52
Error in line 7: uaPz A516 63,9
Error in line 2: DKS S451 30,2
Error in line 15: DKS A42 34,6
Error in line 24: DLfA A42 32,4
